# httpserver_test_idf_svc

./: Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: main.rs  main.rs.bak
static/: index.html
templates/: ethernet.html  logs.html  metering.html  mqtt.html  ota.html  relay.html  status.html  wifi.html
