[package]
name = "httpserver-test-idf-svc"
version = "0.1.0"
authors = ["Dane Slattery <dane@polarmonitoring.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "httpserver-test-idf-svc"
harness = false                  # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
serde = { version = "1.0", features = ["derive"] }
minijinja = "2.1.0"
chrono = "0.4.38"
anyhow = "*"
once_cell = "1.19.0"
embedded-svc = "0.28.0"
futures-lite = "2.3.0"
edge-http = { version = "0.2.1", features = ["std"] }
edge-std-nal-async = "0.2.0"
embedded-nal-async-xtra = "0.2.0"
embedded-io-async = "0.6.1"
embassy-time = { version = "0.3.1", features = ["generic-queue"] }

[build-dependencies]
embuild = "0.32.0"


[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }
